double tap was still zooming on ios safari; hope this fixes it

--- a/style.css
+++ b/style.css
@@ -16,6 +16,9 @@ body {
 	background-image: url("resources/CheckerBoardSeemlessPattern.svg");
 	background-size: 370px;
 	background-position: center center;
+	/* don't zoom on double-tap */
+	touch-action: manipulation; 
+	touch-action: pan-y;
 }
 
 div {
@@ -75,9 +78,6 @@ button {
 	border-radius: 10px;
 	overflow: hidden;
 	cursor: pointer;
-	
-	/* don't zoom on double-tap */
-	touch-action: manipulation; 
 }
 
 #score {
